logs/.ipynb_checkpoints/client-1-35d17a96-checkpoint.log
Traceback (most recent call last):
  File "/home/mtheologitis/anaconda3/envs/flower/lib/python3.10/runpy.py", line 187, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/home/mtheologitis/anaconda3/envs/flower/lib/python3.10/runpy.py", line 157, in _get_module_details
    code = loader.get_code(mod_name)
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/mtheologitis/FDA-Opt-Sys/fdaopt/client.py", line 122
    ).to_client()
    ^
SyntaxError: positional argument follows keyword argument
